--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body{
 
     color:white;
 
-    overflow:hidden;
+    overflow:auto;
 
 }
 
